--- a/stock-titan/Makefile
+++ b/stock-titan/Makefile
@@ -1,7 +1,10 @@
+dirs:
+	@mkdir -p data archive logs
 main: 
 	@python3 main.py
 ingest: 
 	@python3 ingest.py
 all:
+	make dirs
 	make main
 	make ingest
