--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   build:
-
+    environment: actions
     runs-on: ubuntu-latest
 
     steps:
@@ -46,7 +46,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       env:
-        DB_URL: ${{ secrets.actions.DB_URL }}
+        DB_URL: ${{ secrets.DB_URL }}
         
     - name: Run stock-titan
       working-directory: ./stock-titan
