--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -26,7 +26,6 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -48,15 +47,15 @@ jobs:
       working-directory: ./stock-titan
       env:
         DB_URL: ${{ secrets.DB_URL }}
-      run: make all
+      run: |
+        export DB_URL=${{ secrets.DB_URL }} && make all
       
-
     - name: Run yahoo-finance
       working-directory: ./yahoo-finance
       env:
         DB_URL: ${{ secrets.DB_URL }}
-      run: make all
-
+      run: |
+        export DB_URL=${{ env.DB_URL }} && make all
     - name: Commit and push changes
       run: |
         git config --global user.email "ayodejiyou@gmail.com"
