--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.12.3
 bs4==0.0.2
 numpy==1.26.4
 pandas==2.2.0
+psycopg2==2.9.9
 pyarrow==15.0.0
 pydantic==2.6.1
 pydantic-settings==2.2.1
