--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -10,7 +10,7 @@ on:
     - cron: "0 20 * * *"  # Run at 8:00 PM UTC (yahoo-finance)
     
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -48,7 +48,7 @@ jobs:
       env:
         DB_URL: ${{ secrets.DB_URL }}
       run: |
-        export DB_URL=${{ secrets.DB_URL }} && make all
+        export DB_URL=${{ env.DB_URL }} && make all
       
     - name: Run yahoo-finance
       working-directory: ./yahoo-finance
