--- a/yahoo-finance/Makefile
+++ b/yahoo-finance/Makefile
@@ -1,13 +1,16 @@
 dirs:
 	@mkdir -p data archive logs
-main: 
-	@python3 main.py
-next: 
-	@python3 next.py
-ingest: 
-	@python3 ingest.py
+extract_urls: 
+	@python3 extract_urls.py
+extract_articles: 
+	@python3 extract_articles.py
+load_db: 
+	@python3 load_db.py
+load_vs: 
+	@python3 load_vs.py
 all:
 	make dirs
-	make main
-	make next
-	make ingest
+	make extract_urls
+	make extract_articles
+	make load_db
+	make load_vs
