--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 aiohttp==3.9.3
 beautifulsoup4==4.12.3
 bs4==0.0.2
+llama-index==0.10.12
+llama-index-embeddings-huggingface==0.1.3
+llama-index-vector-stores-timescalevector==0.1.2
 numpy==1.26.4
 pandas==2.2.0
 psycopg2==2.9.9
@@ -9,3 +12,5 @@ pydantic==2.6.1
 pydantic-settings==2.2.1
 requests==2.31.0
 sqlmodel==0.0.16
+timescale-vector==0.0.4
+torch==2.2.1
