--- a/.github/workflows/yahoo-finance.yml
+++ b/.github/workflows/yahoo-finance.yml
@@ -44,6 +44,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Run unit tests
+      working-directory: ./yahoo-finance
       run: python -m unittest tests/test_functions.py
 
     - name: Run yahoo-finance
